--- a/loadc/templates/sqlx.tmpl
+++ b/loadc/templates/sqlx.tmpl
@@ -33,7 +33,7 @@ Core: core,
 }
 
 func  New{{ $.Ident }}FromCore(core interface{
-Rebind(query string) string
+{{ if $.HasFeature "sqlx/rebind" }} Rebind(query string) string {{ end }}
 Beginx() (*sqlx.Tx, error)
 BeginTxx(ctx context.Context, opts *sql.TxOptions) (*sqlx.Tx, error)
 PrepareNamed(query string) (*sqlx.NamedStmt, error)
@@ -53,7 +53,7 @@ Core: core,
 type {{ $impName }} struct {
 withTx bool
 Core interface{
-Rebind(query string) string
+{{ if $.HasFeature "sqlx/rebind" }} Rebind(query string) string {{ end }}
 Beginx() (*sqlx.Tx, error)
 BeginTxx(ctx context.Context, opts *sql.TxOptions) (*sqlx.Tx, error)
 PrepareNamed(query string) (*sqlx.NamedStmt, error)
